# vib-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
examples/example-plugin/: Cargo.toml
examples/example-plugin/src/: lib.rs
plugins/boot-shell/: Cargo.toml
plugins/boot-shell/src/: lib.rs
plugins/ostree-pkg/: Cargo.toml
plugins/ostree-pkg/src/: lib.rs
silverblue-package/: Cargo.toml
silverblue-package/src/: lib.rs
vib-api/: Cargo.toml
vib-api/src/: lib.rs
vib-common/: Cargo.toml
vib-common/src/: lib.rs
vib-macros/: Cargo.toml
vib-macros/src/: lib.rs
