[workspace]
resolver = "2"

members = ["plugins/ostree-pkg", "plugins/boot-shell", "examples/example-plugin", "vib-api", "vib-macros"]

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
vib-api = {path = "vib-api"}
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
tempfile = "3.17.1"