[package]
name = "vib-api"
version = "0.0.3"
edition = "2021"
description = "Rust implementation of Vib's plugin API" 
license = "MIT"
repository = "https://github.com/stoorps/vib-rs"


[dependencies]
serde.workspace = true
serde_json.workspace = true
vib-macros = {path = "../vib-macros", optional = true }

[features]
default = ["macros"]
macros = ["dep:vib-macros"]