[package]
name = "vib-macros"
version = "0.0.2"
edition = "2021"
description = "Macros for use in vib-api" 
license = "MIT"
repository = "https://github.com/stoorps/vib-rs"


[lib]
proc-macro = true


[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
serde.workspace = true
serde_json.workspace = true

serde_derive = "1.0.217" # for doctest
